tdf#148494: export: Always add space separator

Otherwise, the macro is saved as MACROBUTTONAllCaps
instead of MACROBUTTON AllCaps

Change-Id: Id1288e23f21ce72884bc1197f171e255ea7458f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133077
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>